--- a/Wipy/FWTOOL-CLI/Version_38/Sources/assets/css/miro.responsive.css
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/assets/css/miro.responsive.css
@@ -33,6 +33,15 @@
         padding: 0;
     }
 }
+
+/* iPhone 7/8 */
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 667px) { 
+	.case_1 {
+		width: 56.25px;
+	}
+}
 .pad19 {
 	margin : 0 auto;
 }
