--- a/Wipy/FWTOOL-CLI/Version_38/Sources/assets/css/miro.responsive.css
+++ b/Wipy/FWTOOL-CLI/Version_38/Sources/assets/css/miro.responsive.css
@@ -13,8 +13,8 @@
 *
 */
 
-/* iPhone 5 */
-@media (max-width: 320px) { 
+/* jusqua iPhone X */
+@media (max-width: 380px) { 
     .header .logo img {
         padding-top: 10px;
         max-width: 100px;
@@ -32,16 +32,18 @@
     input.form-control {
         padding: 0;
     }
-}
-
-/* iPhone 7/8 */
-@media only screen 
-    and (device-width : 375px) 
-    and (device-height : 667px) { 
 	.case_1 {
 		width: 56.25px;
 	}
 }
+
+/* iPhone 7/8 
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 667px) { 
+	
+	}
+} */
 .pad19 {
 	margin : 0 auto;
 }
