--- a/Wipy/Sources/assets/css/miro.css
+++ b/Wipy/Sources/assets/css/miro.css
@@ -223,7 +223,7 @@ form .custom-select:focus {
 footer {
     background: #333;
     color: #fff;
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     right: 0;
     left: 0;
