--- a/Wipy/FWTOOL-CLI/Version_Test/Sources/assets/css/miro.css
+++ b/Wipy/FWTOOL-CLI/Version_Test/Sources/assets/css/miro.css
@@ -1,6 +1,7 @@
-html, body {
-    width: 100%;
-    height: 100%;
+html{
+	width: 100%;
+	min-height: 100%;
+	position: relative;
 	cursor: pointer; 
 }
 
@@ -109,7 +110,7 @@ body {
     color: #fff;
     text-transform: uppercase;
     vertical-align: middle;
-    margin: 0;
+    margin:0;
     padding: 0;
     font-size: 14px;
 }
@@ -157,7 +158,7 @@ body {
 
 /* MAIN */
 main#main {
-    height :75%;
+    margin-bottom :44px;
 }
 
 /* TABLE */
@@ -225,14 +226,13 @@ form .custom-select:focus {
 footer {
     background: #333;
     color: #fff;
-    /*position: fixed;*/
+    position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
     border-top: 3px solid #BF073E;
     padding-top: 5px;
     padding-bottom: 5px;
-	height :10%;
 }
 
 footer p {
@@ -256,3 +256,5 @@ footer a:active,
 footer a:focus {
     color: #ffffff;
 }
+
+
