Alignement des lignes dans la page Conf

--- a/Wipy/FWTOOL-CLI/Version_Test/Sources/assets/css/miro.css
+++ b/Wipy/FWTOOL-CLI/Version_Test/Sources/assets/css/miro.css
@@ -1,8 +1,8 @@
-html{
-	width: 100%;
-	min-height: 100%;
-	position: relative;
-	cursor: pointer; 
+html {
+    width: 100%;
+    min-height: 100%;
+    position: relative;
+    cursor: pointer;
 }
 
 body {
@@ -13,7 +13,7 @@ body {
 /* HEADER */
 .header {
     background: #fff;
-	height :15%;
+    height : 15%;
 }
 
 .header h1 {
@@ -71,17 +71,13 @@ body {
     border-color: #333;
 }
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active {
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: #BF073E !important;
     box-shadow: none;
     border-color: #333;
 }
 
-.btn-primary:not(:disabled):not(.disabled).active, 
-.btn-primary:not(:disabled):not(.disabled):active, 
-.show > .btn-primary.dropdown-toggle {
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
     border-color: #333;
     box-shadow: none;
 }
@@ -110,7 +106,7 @@ body {
     color: #fff;
     text-transform: uppercase;
     vertical-align: middle;
-    margin:0;
+    margin: 0;
     padding: 0;
     font-size: 14px;
 }
@@ -158,7 +154,7 @@ body {
 
 /* MAIN */
 main#main {
-    margin-bottom :44px;
+    margin-bottom : 44px;
 }
 
 /* TABLE */
@@ -185,22 +181,27 @@ main#main {
     font-size: 22px;
     text-transform: uppercase;
 }
-
+div .Conf {
+    text-align:left;
+    font-weight :700;
+    .input {
+        
+    }
+}
 /* FORM */
+
 form .form-row {
     margin: 0 auto;
     width: 100%;
-    text-align: center;
+    text-align:left ;
 }
 
-form .form-control,
-form .custom-select {
+form .form-control, form .custom-select {
     border-radius: 0;
     font-size: 0.7rem;
 }
 
-form .form-control:focus,
-form .custom-select:focus {
+form .form-control:focus, form .custom-select:focus {
     border-color: #BF073E;
     box-shadow: none;
 }
@@ -214,10 +215,7 @@ form .custom-select:focus {
     color: #fff;
 }
 
-.custom-select option:hover,
-.custom-select option:focus,
-.custom-select option:active,
-.custom-select option[selected] {
+.custom-select option:hover, .custom-select option:focus, .custom-select option:active, .custom-select option[selected] {
     background-color: #333;
     color: #fff;
 }
@@ -251,10 +249,6 @@ footer a {
     color: #BF073E;
 }
 
-footer a:hover,
-footer a:active,
-footer a:focus {
+footer a:hover, footer a:active, footer a:focus {
     color: #ffffff;
 }
-
-
