--- a/Wipy/FWTOOL-CLI/Version_39/Sources/assets/css/miro.css
+++ b/Wipy/FWTOOL-CLI/Version_39/Sources/assets/css/miro.css
@@ -42,7 +42,10 @@
     font-size: 1.2em!important;
 	}
 }
-
+#etat_co{
+    font-family: 'Segoe UI';
+    color:white;
+}
 html{
     width: 100%; /* Largeur de la page html */
     min-height: 100%; /* Taille minimale de la page html */
